[gd_scene load_steps=5 format=3 uid="uid://d0kda0ajaahow"]

[ext_resource type="Script" path="res://objects/experience_gem.gd" id="1_6weaj"]
[ext_resource type="Texture2D" uid="uid://2auvgxricp17" path="res://objects/Gem_green.png" id="1_u0hgx"]
[ext_resource type="AudioStream" uid="uid://e3o03aj75xrp" path="res://objects/collectgem(1).mp3" id="3_ny5js"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bhyhu"]
size = Vector2(10, 10)

[node name="ExperienceGem" type="Area2D" groups=["loot"]]
collision_layer = 8
collision_mask = 0
script = ExtResource("1_6weaj")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_u0hgx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_bhyhu")

[node name="snd_collected" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ny5js")
volume_db = -10.0

[node name="Timer" type="Timer" parent="."]

[connection signal="finished" from="snd_collected" to="." method="_on_snd_collected_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
